<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/ic_baseline_house_24"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_profile_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/transaction"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/transactions" />

    <item
        android:id="@+id/buy_Elect"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/buy_electricity" />

    <item
        android:id="@+id/referrals"
        android:icon="@drawable/ic_baseline_sports_kabaddi_24"
        android:title="@string/referrals" />

    <item
        android:id="@+id/contact_US"
        android:icon="@drawable/ic_baseline_textsms_24"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/reminder"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/reminders" />

    <item
        android:id="@+id/meters_con"
        android:icon="@drawable/ic_baseline_near_me_24"
        android:title="@string/meter_consumption_history" />

    <item
        android:id="@+id/other_Services"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/other_services" />

    <item
        android:id="@+id/help_Faq"
        android:icon="@drawable/ic_baseline_call_split_24"
        android:title="@string/help_faq" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout" />
</menu>