<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/referralsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/augustine_wong"
    tools:context=".ui.ReferralsActivity">

    <include
        android:id="@+id/buyUnitToolbar"
        layout="@layout/buy_unit_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReferrals"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buyUnitToolbar">

        <TextView
            android:id="@+id/next_recharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/topText"
            android:textColor="@color/background_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:background="@color/holo_green_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/holo_green_dark"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/wallet_balance"
                android:textColor="@color/holo_green_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/get_up_to_n100_or_more_on_your_next" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recharge_by_inviting_your_friends_to" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/buy_power_using_the_link_below" />

            <TextView
                android:id="@+id/textCopy"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/holo_green_light"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/https_buyPower_ng_ref_b27f4c2d"
                android:textColor="@color/background_dark"
                app:drawableEndCompat="@drawable/ic_baseline_file_copy_24" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_baseline_share_24"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingLeft="112dp"
                android:paddingRight="112dp"
                android:text="@string/share"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ref2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cardViewReferrals">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/holo_green_light"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/referral_list"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="58dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/no_referrals"
                android:textColor="@color/background_dark" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>