<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/augustine_wong"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ContactUsActivity">

    <include
        android:id="@+id/buyUnitToolbar"
        layout="@layout/buy_unit_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/buyUnitToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/buyPower"
                android:textColor="@color/primary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/weAreHereTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/we_are_here_to_answer_any_questions_you"
                app:layout_constraintTop_toBottomOf="@id/textViewContactUs" />

            <TextView
                android:id="@+id/aboutOurServicesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/may_have_about_our_services"
                app:layout_constraintTop_toBottomOf="@id/weAreHereTextView" />

            <TextView
                android:id="@+id/textViewContactUsWe3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/want_to_talk_call_us_on"
                android:textColor="@color/background_dark"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/aboutOurServicesTextView" />

            <TextView
                android:id="@+id/textViewContactUsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/_0706_690_8262"
                android:textColor="@color/background_dark"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewContactUsWe3" />

            <ImageView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_call_24"
                app:layout_constraintTop_toBottomOf="@id/textViewContactUsNumber" />

            <TextView
                android:id="@+id/textViewContactUsEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/email_support_qachi_ng"
                android:textColor="@color/background_dark"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/call" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@color/background_light"
                app:layout_constraintTop_toBottomOf="@id/textViewContactUsEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/view">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:text="@string/please_select_a_reason"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/holo_green_light"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/autoCompleteTextViewContactUs1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_reasons_optional"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="30dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:shadowColor="@color/holo_green_light"
                android:text="@string/send_message"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>