<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginTop="80dp"
    app:cardBackgroundColor="#01b14a"
    app:cardCornerRadius="13dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/update"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_baseline_local_activity_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/update"
            android:fontFamily="sans-serif"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/thank_you_for_your_"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continuous_patronage"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>